--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "uuid": "^9.0.1"
   }
 }
