--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Olakunle Owolabi",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "@prisma/client": "^5.8.1",
     "argon2": "^0.31.2",
     "config": "^3.3.9",
