--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 # Keep environment variables out of version control
 .env
-/config
+#/config
 ecommerce-server-service-key.json
 public
